Se arregla error que no dejaba ver correctamente los modales de historial de asistencia

--- a/Src/index.html
+++ b/Src/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-
-    <template> <!-- Cuadro de inicio de sesion -->
+    <!-- Cuadro de inicio de sesion -->
+    <template> 
         <div class="container mt-0.2 d-flex justify-content-center">
             <div class="card p-4" id="containerLogin">
                 <h1 class="card-title" style="color: #00304D;"><strong>¡Bienvenido!, inicia sesión para usar <span
@@ -75,6 +75,7 @@
         </div>
     </template>
 
+    
     <div class="container-fluid d-flex" id="workArea">
         <!-- HTML -->
         <div class="card p-2" id="optionMenu">
@@ -549,7 +550,7 @@
                                 <div class="flex-grow-1">
                                 </div>
                                 <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                    data-bs-target="#updateJustificationModal" id="btnHistoryAsist"
+                                    data-bs-target="#MoreDetaillFillUpModal" id="btnHistoryAsist"
                                     style="background-color: #f6c307;">
                                     <strong>Justificado</strong></button>
                             </div>
@@ -919,7 +920,8 @@
         </div>
 
     </div>
-    <template><!--  Cuadro de area de trabajo  -->
+    <!--  Cuadro de area de trabajo  -->
+    <template>
     </template>
 
     <!-- Scripts -->
